<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TimeLearnMenuFragment">

    <Button
        android:id="@+id/analog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_analog"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="26sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/digital_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_digital"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="26sp"
        android:layout_marginVertical="8dp"/>

    <Button
        android:id="@+id/week_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_week"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="26sp"
        android:layout_marginVertical="8dp"/>

    <Button
        android:id="@+id/month_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_month"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="26sp"
        android:layout_marginVertical="8dp"/>

    <Button
        android:id="@+id/season_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_season"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="26sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

</LinearLayout>