<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".LearnActivity">

    <Button
        android:id="@+id/time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_time"
        android:onClick="timeMenu"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="26sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/memory_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_memory"
        android:onClick="memoryMenu"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="26sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/lang_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_lang"
        android:onClick="langMenu"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="26sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/maths_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_maths"
        android:onClick="mathsMenu"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="26sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/visual_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_visual"
        android:onClick="visualMenu"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="26sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp" />
</LinearLayout>