<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MathLearnMenuFragment">

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_add"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="36sp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/sub_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_sub"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="36sp"
        android:layout_marginVertical="16dp"/>

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_multiply"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="36sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>

</LinearLayout>