<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MemoryLearnMenuFragment">

    <Button
        android:id="@+id/forward_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_forward"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="36sp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/backward_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_backward"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="36sp"
        android:layout_marginVertical="16dp"/>

    <Button
        android:id="@+id/images_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_images"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="36sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>

</LinearLayout>